--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ management.endpoints.web.exposure.include=health,info,trace,metrics
 logging.level.root=INFO
 logging.level.org.springframework.web=INFO
 spring.jpa.hibernate.use-new-id-generator-mappings=false
+spring.jpa.hibernate.ddl-auto = update
