--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<dependency>
-		    <groupId>com.googlecode.json-simple</groupId>
-		    <artifactId>json-simple</artifactId>
-		    <version>1.1</version>
-		</dependency>
 		
 		<!--
 		<dependency>
@@ -93,7 +88,12 @@
 		    <artifactId>commons-lang3</artifactId>
 		    <version>3.12.0</version>
 		</dependency>
-		
+		<dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-migrationsupport</artifactId>
+		    <version>5.5.2</version> 
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
