--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ logging.level.root=INFO
 logging.level.org.springframework.web=INFO
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
