--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/paymybuddy?serverTimeZone=UTC
 spring.datasource.username=root
-spring.datasource.password=1975
+spring.datasource.password=ENC(yzQ0r6mtF++DnfIxO8Ottw==)
+jasypt.encryptor.password=tata
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto = none
@@ -10,3 +11,4 @@ logging.level.org.springframework.web=INFO
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+// spring.datasource.generate-unique-name=false
