--- a/pom.xml
+++ b/pom.xml
@@ -26,17 +26,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		
 		<dependency>
 		  <groupId>com.github.ulisesbocchio</groupId>
 		  <artifactId>jasypt-spring-boot-starter</artifactId>
 		  <version>2.1.1</version>
 		</dependency>
-		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-oauth2-client</artifactId> 
-			</dependency> -->
-		<!--  <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-security</artifactId> 
-		</dependency>-->
-		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-thymeleaf</artifactId> 
-			</dependency> -->
+		<!-- https://mvnrepository.com/artifact/net.iharder/base64 -->
+		<dependency>
+		    <groupId>net.iharder</groupId>
+		    <artifactId>base64</artifactId>
+		    <version>2.3.9</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
@@ -45,16 +47,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
-		<!--<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-devtools</artifactId>
-		    <scope>runtime</scope>
-		    <optional>true</optional>
-		</dependency>-->
-
-		<!-- <dependency> <groupId>org.thymeleaf.extras</groupId> <artifactId>thymeleaf-extras-springsecurity5</artifactId> 
-			</dependency> -->
 
 		<dependency>
 			<groupId>mysql</groupId>
@@ -67,7 +59,6 @@
 			<version>1.18.22</version>
 			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.jacoco</groupId>
 			<artifactId>jacoco-maven-plugin</artifactId>
